--- a/game-leaning/site-plan.html
+++ b/game-leaning/site-plan.html
@@ -21,7 +21,9 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>The purpose of this website is to help guide people who are starting out 
+        game development 
+      </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
