--- a/game-leaning/site-plan.html
+++ b/game-leaning/site-plan.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Game Design Starting Points Site Plan</h1>
       <h2>Emmitt Stevenson</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>WDD 130-3</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -22,12 +22,14 @@
       <h2>Overview</h2>
       <h3>Purpose</h3>
       <p>The purpose of this website is to help guide people who are starting out 
-        game development 
+        game development and need guidence on what kind of platform they should use.
+        Depending on what their interest are in game making will help them determine
+        what platform they would want to use the most.
       </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>The audience that would be for this website would be for about 12 years old and up.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -53,7 +55,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#148c8c]</td><td class="secondary">[#2c0434]</td><td class="accent1">[##3aacbc]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#148c8c]</td><td class="secondary">[#2c0434]</td><td class="accent1">[#3aacbc]</td><td class="accent2"></td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -64,10 +66,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Orbiton  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Exo 2  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
