--- a/game-leaning/site-plan.html
+++ b/game-leaning/site-plan.html
@@ -132,8 +132,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/HomePicture1.png" alt="image for homepage">
+        <img src="images/HomePicture2.jpeg" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -141,8 +141,8 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/Unity.jpg" alt="image for page">
+        <img src="images/UnrealEngine.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -150,8 +150,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/thinking.png" alt="image for page3">
+        <img src="images/Quiz.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -165,19 +165,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Home Wireframe.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Page1 Wireframe.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Page2 Wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
