--- a/game-leaning/site-plan.html
+++ b/game-leaning/site-plan.html
@@ -21,10 +21,12 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this website is to help guide people who are starting out 
-        game development and need guidence on what kind of platform they should use.
-        Depending on what their interest are in game making will help them determine
-        what platform they would want to use the most.
+      <p>I love making video games, it is something I want to do for a living. But when I tried to figure out what platform to use out 
+        of the many options, it took a good long while for me to find the application I wanted to use. For my website elevator pitch, 
+        I would like to make a website that would be a way for people to decide on what game design engine and type of game design they 
+        would want to do. It would be an educational website that would include information about different platforms that they can use to 
+        learn about what they would be most interested in. Like if they would want to work with 3D projects or 2D projects, what kind of 
+        game-making platform they would want to use, and different art platforms to be used as well.  
       </p>  <!-- change this -->
 
 
