--- a/game-leaning/site-plan.html
+++ b/game-leaning/site-plan.html
@@ -94,8 +94,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Info</a>
+        <a href="#">Quiz</a>
       </nav>
       <hr>
       <h2>
@@ -106,10 +106,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Info <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Quiz  <!-- change this -->
         </div>
 
         <div class="top">
@@ -131,29 +131,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        This is where the user can get a sumary of what this website is about.
       </p>
       <p>Images for the Home page</p>
-        <img src="images/HomePicture1.png" alt="image for homepage">
+        <img src="images/HomePicture1.png" alt="image for homepage" width="700" height="500">
         <img src="images/HomePicture2.jpeg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Info Page</h3>
       <p>
-        [Written copy for the Page 2 here]
+       Where the user can learn about the different game engines they can use for game development.
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/Unity.jpg" alt="image for page">
-        <img src="images/UnrealEngine.jpg" alt="image for page">
+        <img src="images/Unity.jpg" alt="image for page" width="700" height="500">
+        <img src="images/UnrealEngine.jpg" alt="image for page" width="700" height="500">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Quiz Page</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This is where the user will take a quiz to determine what game engine works best for them.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/thinking.png" alt="image for page3">
-        <img src="images/Quiz.jpg" alt="image for page3">
+        <img src="images/thinking.png" alt="image for page3" width="700" height="500">
+        <img src="images/Quiz.jpg" alt="image for page3" width="700" height="500">
 
       </ul>
       <hr>
