--- a/game-leaning/site-plan.html
+++ b/game-leaning/site-plan.html
@@ -94,7 +94,7 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Info</a>
+        <a href="#">Game Engines</a>
         <a href="#">Quiz</a>
       </nav>
       <hr>
@@ -167,19 +167,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="images/Home Wireframe.png" alt="home page wireframe">
+      <img src="images/home_wireframe.JPG" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="images/Page1 Wireframe.png" alt="page 2 wireframe">
+      <img src="images/game_engine_wireframe.JPG" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="images/Page2 Wireframe.png" alt="page 3 wireframe">
+      <img src="images/quiz_wireframe.JPG" alt="page 3 wireframe">
     </main>
   </body>
 
