--- a/game-leaning/site-plan.html
+++ b/game-leaning/site-plan.html
@@ -165,19 +165,19 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Home page to sum up what the purpose of the website is.
       </p>
       <img src="images/home_wireframe.JPG" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This page will explain the differences between Unity and Unreal Engine.
       </p>
       <img src="images/game_engine_wireframe.JPG" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This page will explain information of what to expect with the quiz and the quiz itself.
       </p>
       <img src="images/quiz_wireframe.JPG" alt="page 3 wireframe">
     </main>
