--- a/game-leaning/game_home.html
+++ b/game-leaning/game_home.html
@@ -27,6 +27,7 @@
 
     <section id="game_summary">
         <h1 class="Home-Title">What is Video Game Design?</h1>
+        
         <p>Video Game Design, to put it simply, is the process of making video games on all kinds 
             of devices! They usually create game ideas, build code, and test software to see if it 
             works. These people work on the characters, story points, gameplay mechanics, settings, 
@@ -56,13 +57,13 @@
     <h3><a href="#">Contact Us</a></h3>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook_logo.png" alt="facebook icon">
+            <img src="images/facebook.png" alt="facebook icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram_logo.jpg" alt="facebook icon">
+            <img src="images/instagram.png" alt="facebook icon">
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter_logo.jpg" alt="facebook icon">
+            <img src="images/twitter.png" alt="facebook icon">
         </a>
     </div>
 </footer>
