--- a/game-leaning/contact.html
+++ b/game-leaning/contact.html
@@ -11,7 +11,7 @@
     <div id="content">
     <header>
         <div class="container"> 
-            <img class="logo" src="images/game_logo.png" alt="Glass Shark Logo" class="image">
+            <img class="logo" src="images/game_logo.png" alt="Glass Shark Logo">
         </div>
         <nav>
             <a href="game_engines.html">Game Engines</a>
@@ -65,7 +65,6 @@
         </a>
     </div>
 </footer>
-</div>
 <script>
     // get the feedback div element so we can do something with it.
     const feedbackElement = document.getElementById('feedback');
