--- a/game-leaning/game_engines.html
+++ b/game-leaning/game_engines.html
@@ -12,7 +12,7 @@
     <div id="content">
         <header>
             <div class="container"> 
-                <img class="logo" src="images/game_logo.png" alt="Glass Shark Logo" class="image">
+                <img class="logo" src="images/game_logo.png" alt="Glass Shark Logo">
                 <div class="middle">
                     <div class="text">
                         <a href="contact.html">Contact Us</a>
