--- a/game-leaning/contact.html
+++ b/game-leaning/contact.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <div id="content">
-    <header>
-        <div class="container"> 
-            <img class="logo" src="images/game_logo.png" alt="Glass Shark Logo">
-        </div>
+        <header>
+            <div class="container"> 
+                <img class="logo" src="images/game_logo.png" alt="Glass Shark Logo">
+                <div class="middle">
+                    <div class="text">
+                        <a href="contact.html">Contact Us</a>
+                    </div>
+                        
+                </div>
+            </div>
         <nav>
             <a href="game_engines.html">Game Engines</a>
             <a href="game_home.html">Home</a>
