--- a/game-leaning/contact.html
+++ b/game-leaning/contact.html
@@ -28,7 +28,7 @@
     </div>
 
         
-   <main>
+   <main class="contactus">
     <div id= "feedback"></div>
     <form action="/my-handling-form-page" method="post">
         <ul>
