--- a/game-leaning/game_quiz.html
+++ b/game-leaning/game_quiz.html
@@ -34,7 +34,7 @@
 </div>
 
     <section id="best-one">
-        <h1 class="Best-option">What is the Best Option</h1>
+        <h2 class="Best-option">What is the Best Option</h2>
         <p>What would be the better option to choose? Well, both game 
             engines are good options to choose from. Unity is a platform 
             that can be easy to learn if you have little to no experience 
@@ -81,7 +81,7 @@
                 </div>
     
                 <div class="game-question-container">
-                    <h2 id="display-question"></h2>
+                    <h3 id="display-question">QUIZ QUESTIONS</h3>
                 </div>
     
                 <div class="game-options-container">
